style.css
.bg-body-custom {
  background-color: #4831d4;
}
.btn-custombtn {
  background-color: #ccf381;
  padding: 12px;
  border-radius: 20px;
}

.hero {
  background-color: #4831d4;
  color: white;
  padding-left: 100px;
}

.hero .job {
  font-size: 60px;
  color: #ccf381;
}
.hero h2 {
  font-size: 106px;
  color: #ccf381;
}
.hero h3 {
  font-weight: 300;
  font-size: 26px;
}

.hero img {
  border: 18px solid #ccf381;
}

section h3 {
  color: #4831d4;
  font-size: 46px;
  padding-top: 40px;
}

footer {
  background-color: #f4ffe0;
}
footer h3 {
  color: #4831d4;
  font-size: 46px;
  padding-top: 40px;
}
footer p {
  color: #4831d4;
  font-size: 20px;
}
footer .social-links a {
  margin: 0 10px;
  color: #4831d4;

  padding: 10px 15px;
  font-size: 36px;
  border-radius: 50%;
  transition: all 100ms ease-in-out;
}
footer .social-links a:hover {
  color: #9a90d8;
}
.email-link {
  font-size: 26px;
  color: #4831d4;
  text-decoration: none;
}
.email-link:hover {
  color: #9a90d8;
}

/* Contact page*/

.content-container {
  background-color: #f4ffe0;

  background-image: url("/src/logo.png");
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 20px;
  color: #4831d4;
  padding: 100px;
}

.content-container h1 {
  color: #4831d4;
}
.content a {
  color: #4831d4;
}

.fa-linkedin {
  font-size: 50px;
}
.content a:hover {
  color: #9a90d8;
}
.email-contact,
.linkedin-contact,
.phone-contact,
.resume {
  background-color: #ecfcd0;
  opacity: 0.85;

  border-radius: 10px;
  padding: 20px;
  margin: 20px auto;
  max-width: 768px;
}

@media (max-width: 768px) {
  .hero {
    padding-left: 5px;
    text-align: center;
  }
  .hero .job {
    font-size: 50px;
  }
  .hero h2 {
    font-size: 66px;
  }
  .hero h3 {
    font-weight: 300;
    font-size: 18px;
    margin-bottom: 15px;
  }
  .email-contact a {
    font-size: 15px;
  }
  .phone-contact h5 {
    font-size: 15px;
  }
  .content-container {
    background-size: cover;

    padding: 0px;
  }
}

